update varnish to 4.1.10,pin Jinjia2 to 2.10

--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -19,6 +19,7 @@ unzip = true
 # Packages to check out/update when buildout is run
 auto-checkout =	
     my315ok.socialorgnization
+    Jinja2
     my315ok.products
     my315ok.wechat
     xtshzz.policy
@@ -103,6 +104,7 @@ devtools =
 
 # Checkout locations
 [sources]
+Jinja2 = fs Jinja2
 collective.indexing = fs collective.indexing
 emc.theme = fs emc.theme
 emc.policy = fs emc.policy
