--- a/sites/pins-5.1.1.cfg
+++ b/sites/pins-5.1.1.cfg
@@ -88,7 +88,8 @@ zope.app.file = 3.6.1
 zope.app.publication = 3.12.0
 
 
-plone.recipe.varnish = 2.0a8
+#plone.recipe.varnish = 2.0a8
+plone.recipe.varnish = 2.3.0
 mr.developer = 1.38
 Cheetah = 2.2.1
 Products.DocFinderTab = 1.0.5
