--- a/sites/5.1.1-versions.cfg
+++ b/sites/5.1.1-versions.cfg
@@ -75,8 +75,10 @@ ZServer = 3.0
 
 # Basics
 # !! keep in sync with requirements.txt !!
-setuptools = 33.1.1
-zc.buildout = 2.9.5
+#setuptools = 33.1.1
+setuptools = 38.2.4
+#zc.buildout = 2.9.5
+zc.buildout = 2.10.0
 
 # recipes and extensions
 CacheControl = 0.12.3
