--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -11,7 +11,7 @@ extends =
 #		http://dist.plone.org/release/5-latest/versions.cfg
     http://dist.plone.org/release/5.1.2/versions.cfg
 #    5.1.1-versions.cfg
-    pins-5.1.1.cfg
+    pins.cfg
 
 versions = versions
 unzip = true
