--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -9,9 +9,9 @@ update-versions-file = versionslastprod2.cfg
 extends = 
 # Known good sets of eggs we may be using
 #		http://dist.plone.org/release/5-latest/versions.cfg
-    http://dist.plone.org/release/5.1.4/versions.cfg
+    http://dist.plone.org/release/5.1.5/versions.cfg
 #    5.1.1-versions.cfg
-    pins-5.1.3.cfg
+    pins.cfg
 
 versions = versions
 unzip = true
