pin for product model

--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -19,6 +19,7 @@ unzip = true
 # Packages to check out/update when buildout is run
 auto-checkout =	
     my315ok.socialorgnization
+    Jinja2
     quintagroup.seoptimizer
     my315ok.products
     my315ok.wechat
@@ -98,6 +99,7 @@ devtools =
 
 # Checkout locations
 [sources]
+Jinja2 = fs Jinja2
 quintagroup.seoptimizer = fs quintagroup.seoptimizer
 xtshzz.policy = fs xtshzz.policy
 xsgs.policy = fs xsgs.policy
