--- a/sites/config/deploy.cfg
+++ b/sites/config/deploy.cfg
@@ -150,10 +150,13 @@ update-command = ${chown-zeo:command}
 # varnish
 [varnish-build]
 recipe = plone.recipe.varnish:build
+url = https://varnish-cache.org/_downloads/varnish-4.1.10.tgz
+varnish_version = 4.1
 
 [varnish-configuration]
 recipe = plone.recipe.varnish:configuration
 backends = 127.0.0.1:${buildout:haproxy-address}
+vcl-version = 4.0
 
 [varnish-script]
 recipe = plone.recipe.varnish:script
