--- a/sites/pins.cfg
+++ b/sites/pins.cfg
@@ -1,7 +1,92 @@
 [versions]
+zodbpickle = 1.0.3
 lxml = 4.2.1
 plone.recipe.varnish = 2.3.0
 beautifulsoup4 = 4.6.0
 Products.ContentWellPortlets = 4.3.0
 mr.developer = 1.38
 
+Products.PloneFormGen = 1.8.1
+Products.PythonField = 1.1.3
+Products.TALESField = 1.1.3
+Products.TemplateFields = 1.2.5
+chardet = 3.0.4
+collective.recipe.backup = 3.0.0
+collective.recipe.supervisor = 0.20
+idna = 2.6
+meld3 = 1.0.2
+plone.recipe.command = 1.1
+plone.recipe.haproxy = 1.1.2
+plone.recipe.precompiler = 0.6
+plone.recipe.unifiedinstaller = 4.3.2
+quintagroup.canonicalpath = 0.7
+superlance = 0.11
+z3c.recipe.usercrontab = 1.4
+zc.recipe.deployment = 1.3.0
+
+# Required by:
+# collective.diazotheme.bootstrap==2.0
+# my315ok.products==4.0
+BeautifulSoup = 3.2.1
+
+# Required by:
+# xtcs.policy==1.0
+MySQL-python = 1.2.5
+
+# Required by:
+# wechat.policy==1.0
+Products.membrane = 3.0
+
+# Required by:
+# xtcs.policy==1.0
+SQLAlchemy = 1.2.12
+
+# Required by:
+# WeRoBot==1.1.1
+bottle = 0.12.13
+
+# Required by:
+# my315ok.socialorgnization==1.0
+# xtcs.policy==1.0
+# xtshzz.policy==1.0
+collective.autopermission = 1.0b2
+
+# Required by:
+# my315ok.socialorgnization==1.0
+collective.dexteritytextindexer = 2.1.0
+
+# Required by:
+# xtshzz.policy==1.0
+collective.wtf = 1.0b9
+
+# Required by:
+# dexterity.membrane==0.3.dev0
+incf.countryutils = 1.0
+
+# Required by:
+# dexterity.membrane==0.3.dev0
+plone.formwidget.captcha = 1.0.3
+
+# Required by:
+# my315ok.products==4.0
+plone.multilingual = 1.2.1
+
+# Required by:
+# my315ok.products==4.0
+rwproperty = 1.0
+
+# Required by:
+# plone.formwidget.captcha==1.0.3
+skimpyGimpy = 1.4
+
+# Required by:
+# superlance==0.11
+supervisor = 3.2.0
+
+# Required by:
+# WeRoBot==1.1.1
+xmltodict = 0.10.2
+
+# Required by:
+# plone.recipe.varnish==2.3.0
+zc.recipe.cmmi = 2.0.0
