switch to Plone5.2.0

--- a/sites/buildout_dev.cfg
+++ b/sites/buildout_dev.cfg
@@ -26,7 +26,12 @@ http-address = 8080
 user = admin:admin
 debug-mode = on
 verbose-security = on
+wsgi = off
 eggs =
+    Zserver
+#    plone.app.blob
+#    Products.ATContentTypes
+#    Products.contentmigration
     ${eggs:main}
     ${eggs:devtools}
     plone.app.robotframework
