--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -4,14 +4,15 @@
 [buildout]
 extensions = mr.developer 
 show-picked-versions = true
-update-versions-file = versionslastprod2.cfg
+update-versions-file = versionslastprod3.cfg
 #overwrite-picked-versions-file = true 
 extends = 
 # Known good sets of eggs we may be using
 #		http://dist.plone.org/release/5-latest/versions.cfg
-    http://dist.plone.org/release/5.1.5/versions.cfg
+#    http://dist.plone.org/release/5.1.5/versions.cfg
 #    5.1.1-versions.cfg
-    pins.cfg
+    http://dist.plone.org/release/5.2.0/versions.cfg
+    pins52.cfg
 
 versions = versions
 unzip = true
@@ -19,6 +20,7 @@ unzip = true
 # Packages to check out/update when buildout is run
 auto-checkout =	
     my315ok.socialorgnization
+    mockup
     Jinja2
     quintagroup.seoptimizer
     my315ok.products
@@ -42,7 +44,7 @@ auto-checkout =
     collective.diazotheme.bootstrap
     plone.app.locales
     WeRoBot
-
+    Products.membrane
 # Make sure buildout always attempts to update packages
 always-checkout = false
    
@@ -50,14 +52,14 @@ always-checkout = false
 [eggs]
 main =
     Plone
-    Products.PloneFormGen
-    Products.ContentWellPortlets
-    my315ok.socialorgnization
+#    Products.PloneFormGen
+#    Products.ContentWellPortlets
+#    my315ok.socialorgnization
     quintagroup.seoptimizer
     my315ok.products
     collective.diazotheme.bootstrap
-    dexterity.membrane
-    xtshzz.policy
+#    dexterity.membrane
+#    xtshzz.policy
     xtcs.policy
     xtcs.theme    
     qyxycjh.policy
@@ -67,14 +69,14 @@ main =
     xsgs.policy
     xsgs.theme
     hjzgb.theme
-    my315ok.theme
-    my315ok.policy
+#    my315ok.theme
+#    my315ok.policy
     xsgs.policy
     hjzgb.policy
-    wechat.policy
-    my315ok.wechat
-    membrane.usersinout
-    WeRoBot
+#    wechat.policy
+#    my315ok.wechat
+#    membrane.usersinout
+#    WeRoBot
 
 test =
     xsgs.theme [test]
@@ -125,3 +127,4 @@ plone.app.locales = fs plone.app.locales
 mockup = fs mockup
 dexterity.membrane = fs dexterity.membrane
 WeRoBot = fs WeRoBot
+Products.membrane = fs Products.membrane
