--- a/sites/requirements.txt
+++ b/sites/requirements.txt
@@ -1,5 +1,9 @@
-setuptools== 39.1.0
-zc.buildout== 2.11.4
-lxml==4.2.1
-Pillow==5.2.0
+#setuptools==41.0.1
+zc.buildout==2.13.2
+#setuptools== 39.1.0
+#zc.buildout== 2.11.4
+#lxml==4.2.1
+lxml==4.3.4
+#Pillow==5.2.0
+Pillow==6.1.0
 bs4
