add self-custom dexterity content type packages to Plone5.2.0 build

--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -54,12 +54,12 @@ main =
     Plone
 #    Products.PloneFormGen
 #    Products.ContentWellPortlets
-#    my315ok.socialorgnization
+    my315ok.socialorgnization
     quintagroup.seoptimizer
     my315ok.products
     collective.diazotheme.bootstrap
-#    dexterity.membrane
-#    xtshzz.policy
+    dexterity.membrane
+    xtshzz.policy
     xtcs.policy
     xtcs.theme    
     qyxycjh.policy
@@ -75,14 +75,15 @@ main =
     hjzgb.policy
 #    wechat.policy
 #    my315ok.wechat
-#    membrane.usersinout
-#    WeRoBot
+    membrane.usersinout
+    WeRoBot
 
 test =
     xsgs.theme [test]
     hjzgb.theme [test]
     my315ok.theme [test]
     collective.diazotheme.bootstrap [test]
+    Products.membrane [test]
 
 devtools =
     bpython
