--- a/sites/config/base.cfg
+++ b/sites/config/base.cfg
@@ -10,6 +10,7 @@ http-address = 8081
 # Zope client 2
 client1-address = 8081
 client2-address = 8881
+client3-address = 8883
 # varnish
 varnish-address = 8580
 #haproxy
